📦 NEW: Nav-frontend-core

--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,6 @@
+@coreModulePath: '../../../node_modules/';
+@nav-frontend-core: '../../node_modules/';
+
 @import '../node_modules/nav-frontend-lenker-style/src/lenker-style.less';
 @import '../node_modules/nav-frontend-typografi-style/src/index.less';
 
