Forklarende hjelpetekst over skissen av dittnav

--- a/src/App.less
+++ b/src/App.less
@@ -3,6 +3,7 @@
 
 @import '../node_modules/nav-frontend-lenker-style/src/lenker-style.less';
 @import '../node_modules/nav-frontend-typografi-style/src/index.less';
+@import '../node_modules/nav-frontend-popover-style/src/popover-style.less';
 
 .App {
   text-align: center;
